segunda query complexa e delete do ficheiro antigo

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "This project was made by group 008:\n",
     "\n",
-    "Afonso Baptista - fc58213\n",
-    "Miguel Borges - fc58187\n",
-    "Miguel Dinis - fc58198\n",
+    "Afonso Baptista - fc58213 \\\n",
+    "Miguel Borges - fc58187 \\\n",
+    "Miguel Dinis - fc58198 \\\n",
     "Rafael Correia - fc58256"
    ]
   },
@@ -114,11 +114,11 @@
    "outputs": [],
    "source": [
     "# MongoDB do Miguel Dinis\n",
-    "# client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
+    "client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
     "# MongoDB do Rafa\n",
     "#client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Afonso\n",
-    "client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "# client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Miguel Borges\n",
     "# client = MongoClient(\"mongodb+srv://mfsb3110:Cfsb1705@cluster10.azlt2.mongodb.net/\")"
    ]
@@ -403,7 +403,7 @@
     "The two complex queries are:\n",
     "\n",
     "1. Change the neutral field to True for the matches that have more than 5 goals scored and that both teams have played with each other at least 100 times\n",
-    "2. Add a goalscorer to the goalscorers list from Cristiano Ronaldo on minute 90 to the 100 matches with the most difference in goals scored between the two teams, and increment the loser team score by 1"
+    "2. Get the 100 matches with the most difference between the home_score and away_score and add 100 matches with the scores flipped, without shootouts and goalscores."
    ]
   },
   {
@@ -503,6 +503,12 @@
     "            \"date\": 1,\n",
     "            \"home_team\": 1,\n",
     "            \"away_team\": 1,\n",
+    "            \"home_score\": 1,\n",
+    "            \"away_score\": 1,\n",
+    "            \"tournament\": 1,\n",
+    "            \"city\": 1,\n",
+    "            \"country\": 1,\n",
+    "            \"neutral\": 1,\n",
     "        }\n",
     "    },\n",
     "    {\"$sort\": {\"difference\": -1}},\n",
@@ -511,67 +517,39 @@
     "\n",
     "matches_with_most_difference = list(collection_results.aggregate(pipeline))\n",
     "\n",
+    "\n",
     "# Print the matches with the most difference between the home_score and away_score\n",
-    "counter = 1\n",
+    "counter = 0\n",
     "print(\"Matches with the most difference between the home_score and away_score:\")\n",
     "for match in matches_with_most_difference:\n",
+    "    counter += 1\n",
     "    print(\"Match number: \", counter, \", Difference: \", match['difference'], \", Date: \", match['date'], \", Home team: \", match['home_team'], \", Away team: \", match['away_team'])\n",
     "\n",
     "matched_count = 0\n",
     "modified_count = 0\n",
     "\n",
-    "# Iterate over the matches with the most difference between the home_score and away_score and add a goal to Cristiano Ronaldo in the 90th minute and update the scores\n",
+    "# Add the 100 matches with the most difference in goals scored between the two teams, but flipped\n",
+    "new_matches = []\n",
     "for match in matches_with_most_difference:\n",
-    "    home_team = match[\"home_team\"]\n",
-    "    away_team = match[\"away_team\"]\n",
-    "    date = match[\"date\"]\n",
-    "\n",
-    "    try:\n",
-    "        results = collection_results.update_one(\n",
-    "            {\"home_team\": home_team, \"away_team\": away_team, \"date\": date},\n",
-    "            [\n",
-    "                {\n",
-    "                    \"$set\": {\n",
-    "                        \"home_score\": {\n",
-    "                            \"$cond\": {\n",
-    "                                \"if\": {\"$lt\": [\"$home_score\", \"$away_score\"]},\n",
-    "                                \"then\": {\"$add\": [\"$home_score\", 1]},\n",
-    "                                \"else\": \"$home_score\",\n",
-    "                            }\n",
-    "                        },\n",
-    "                        \"away_score\": {\n",
-    "                            \"$cond\": {\n",
-    "                                \"if\": {\"$gt\": [\"$home_score\", \"$away_score\"]},\n",
-    "                                \"then\": {\"$add\": [\"$away_score\", 1]},\n",
-    "                                \"else\": \"$away_score\",\n",
-    "                            }\n",
-    "                        },\n",
-    "                        \"goalscorers\": {\n",
-    "                            \"$concatArrays\": [\n",
-    "                                {\"$ifNull\": [\"$goalscorers\", []]},\n",
-    "                                [\n",
-    "                                    {\n",
-    "                                        \"team\": \"Portugal\",\n",
-    "                                        \"scorer\": \"Cristiano Ronaldo\",\n",
-    "                                        \"minute\": 90.0,\n",
-    "                                        \"own_goal\": False,\n",
-    "                                        \"penalty\": False,\n",
-    "                                    }\n",
-    "                                ],\n",
-    "                            ]\n",
-    "                        },\n",
-    "                    }\n",
-    "                }\n",
-    "            ],\n",
-    "        )\n",
-    "\n",
-    "        matched_count += results.matched_count\n",
-    "        modified_count += results.modified_count\n",
-    "    except Exception as e:\n",
-    "        print(\"Error updating the documents, error: \", e)\n",
-    "\n",
-    "print(\"Matched count: \", matched_count)\n",
-    "print(\"Modified count: \", modified_count)"
+    "    new_match = {\n",
+    "        \"date\": match['date'],\n",
+    "        \"home_team\": match['away_team'],\n",
+    "        \"away_team\": match['home_team'],\n",
+    "        \"home_score\": match['away_score'],\n",
+    "        \"away_score\": match['home_score'],\n",
+    "        \"tournament\": match['tournament'],\n",
+    "        \"city\": match['city'],\n",
+    "        \"country\": match['country'],\n",
+    "        \"neutral\": match['neutral'],\n",
+    "        \"goalscorers\": []\n",
+    "    }\n",
+    "    new_matches.append(new_match)\n",
+    "    \n",
+    "try:\n",
+    "    collection_results.insert_many(new_matches)\n",
+    "    print(f\"Inserted {len(new_matches)} matches with the most difference in goals scored between the two teams flipped.\")\n",
+    "except Exception as e:\n",
+    "    print(\"Error inserting the documents, error: \", e)"
    ]
   },
   {
