--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# MongoDB do Miguel Dinis\n",
-    "client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
+    "#client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
     "# MongoDB do Rafa\n",
     "#client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Afonso\n",
-    "# client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Miguel Borges\n",
     "# client = MongoClient(\"mongodb+srv://mfsb3110:Cfsb1705@cluster10.azlt2.mongodb.net/\")"
    ]
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,12 +354,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Querie 1\n",
+    "# Query 1\n",
     "\n",
     "# We need to convert the date to a datetime object to compare it with the date_limit\n",
     "date_limit = datetime.datetime(2003, 12, 31)\n",
     "\n",
-    "querie1 = {\n",
+    "query1 = {\n",
     "        \"description\": \"Games where Portugal scored more than 3 goals after 2003\",\n",
     "        \"query\": {\n",
     "            \"$and\": [\n",
@@ -371,8 +371,8 @@
     "    }\n",
     "\n",
     "\n",
-    "# Querie 2\n",
-    "querie2 = {\n",
+    "# Query 2\n",
+    "query2 = {\n",
     "        \"description\": \"Games where Australia and Sweden played against each other\",\n",
     "        \"query\": {\n",
     "            \"$or\": [\n",
@@ -384,13 +384,13 @@
     "\n",
     "# Execute the queries\n",
     "\n",
-    "results = collection_results.find(querie1['query'])\n",
-    "print(\"Results for querie 1:\")\n",
+    "results = collection_results.find(query1['query'])\n",
+    "print(\"Results for query 1:\")\n",
     "for result in results:\n",
     "    print(\"Date:\", result['date'], \", Home team:\", result['home_team'], \", Away team:\", result['away_team'], \", Home score:\", result['home_score'], \", Away score:\", result['away_score'], \", Tournament:\", result['tournament'], \", City:\", result['city'], \", Country:\", result['country'], \", Neutral:\", result['neutral'], \", Goalscorers:\", result['goalscorers'], \", Shootout:\", result['shootout'])\n",
     "    \n",
-    "results = collection_results.find(querie2['query'])\n",
-    "print(\"Results for querie 2:\")\n",
+    "results = collection_results.find(query2['query'])\n",
+    "print(\"Results for query2 2:\")\n",
     "for result in results:\n",
     "    print(\"Date:\", result['date'], \", Home team:\", result['home_team'], \", Away team:\", result['away_team'], \", Home score:\", result['home_score'], \", Away score:\", result['away_score'], \", Tournament:\", result['tournament'], \", City:\", result['city'], \", Country:\", result['country'], \", Neutral:\", result['neutral'], \", Goalscorers:\", result['goalscorers'], \", Shootout:\", result['shootout'])\n"
    ]
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complex querie 1\n",
+    "# Complex query 1\n",
     "\n",
     "# Obtain the teams that have played with each other at least 100 times\n",
     "pipeline = [\n",
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complex querie 2\n",
+    "# Complex query 2\n",
     "\n",
     "# Get the matches with the most difference between the home_score and away_score\n",
     "pipeline = [\n",
@@ -887,7 +887,7 @@
     "The two complex queries are:\n",
     "\n",
     "1. Change the neutral field to True for the matches that have more than 5 goals scored and that both teams have played with each other at least 100 times\n",
-    "2. Add a goalscorer to the goalscorers list from Cristiano Ronaldo on minute 90 to the 100 matches with the most difference in goals scored between the two teams, and increment the loser team score by 1"
+    "2. Get the 100 matches with the most difference between the home_score and away_score and add 100 matches with the scores flipped, without shootouts and goalscores."
    ]
   },
   {
@@ -896,7 +896,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SQL query to get team pairs\n",
+    "# SQL query to get team pairs with match counts\n",
     "team_pairs_query = \"\"\"\n",
     "WITH normalized_matches AS (\n",
     "    SELECT \n",
@@ -922,8 +922,17 @@
     "try:\n",
     "    with engine.connect() as connection:\n",
     "        result = connection.execute(text(team_pairs_query))\n",
-    "        team_pairs = [{\"home_team\": row[\"home_team\"], \"away_team\": row[\"away_team\"]} for row in result]\n",
-    "        print(\"Team pairs that have played at least 100 times:\", team_pairs)\n",
+    "        # Convert rows into a list of dictionaries\n",
+    "        team_pairs = [{\"home_team\": row[0], \"away_team\": row[1], \"count\": row[2]} for row in result]\n",
+    "        \n",
+    "        # Print the results in the desired format\n",
+    "        print(\"Teams that have played with each other at least 100 times:\")\n",
+    "        for team_pair in team_pairs:\n",
+    "            print(\n",
+    "                f\"Home team:  {team_pair['home_team']} , \"\n",
+    "                f\"Away team:  {team_pair['away_team']} , \"\n",
+    "                f\"Count:  {team_pair['count']}\"\n",
+    "            )\n",
     "except Exception as e:\n",
     "    print(f\"Error fetching team pairs: {e}\")\n",
     "\n",
@@ -960,15 +969,116 @@
     "try:\n",
     "    with engine.connect() as connection:\n",
     "        result = connection.execute(text(update_matches_query))\n",
-    "        print(f\"Rows updated: {result.rowcount}\")\n",
+    "        matched_count = result.rowcount\n",
+    "        print(f\"Matched count:  {matched_count}\")\n",
+    "        print(f\"Modified count:  {matched_count}\")  # Assuming all matched rows are modified\n",
     "except Exception as e:\n",
-    "    print(f\"Error updating matches: {e}\")"
+    "    print(f\"Error updating matches: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Query to fetch matches with the most difference\n",
+    "most_difference_query = \"\"\"\n",
+    "SELECT \n",
+    "    match_id,\n",
+    "    ABS(home_score - away_score) AS difference,\n",
+    "    date,\n",
+    "    home_team,\n",
+    "    away_team,\n",
+    "    home_score,\n",
+    "    away_score,\n",
+    "    tournament,\n",
+    "    city,\n",
+    "    country,\n",
+    "    neutral\n",
+    "FROM matches\n",
+    "ORDER BY difference DESC\n",
+    "LIMIT 100;\n",
+    "\"\"\"\n",
+    "\n",
+    "# Query to insert flipped matches\n",
+    "insert_flipped_matches_query = \"\"\"\n",
+    "INSERT INTO matches (date, home_team, away_team, home_score, away_score, tournament, city, country, neutral)\n",
+    "SELECT \n",
+    "    date,\n",
+    "    away_team AS home_team,\n",
+    "    home_team AS away_team,\n",
+    "    away_score AS home_score,\n",
+    "    home_score AS away_score,\n",
+    "    tournament,\n",
+    "    city,\n",
+    "    country,\n",
+    "    neutral\n",
+    "FROM (\n",
+    "    SELECT \n",
+    "        match_id,\n",
+    "        ABS(home_score - away_score) AS difference,\n",
+    "        date,\n",
+    "        home_team,\n",
+    "        away_team,\n",
+    "        home_score,\n",
+    "        away_score,\n",
+    "        tournament,\n",
+    "        city,\n",
+    "        country,\n",
+    "        neutral\n",
+    "    FROM matches\n",
+    "    ORDER BY difference DESC\n",
+    "    LIMIT 100\n",
+    ") AS top_matches;\n",
+    "\"\"\"\n",
+    "\n",
+    "# Fetch matches with most difference\n",
+    "try:\n",
+    "    with engine.connect() as connection:\n",
+    "        # Execute the query\n",
+    "        result = connection.execute(text(most_difference_query))\n",
+    "        \n",
+    "        # Process results\n",
+    "        matches_with_most_difference = [\n",
+    "            {\n",
+    "                \"match_id\": row[0],  # Adjust indices to match query column order\n",
+    "                \"difference\": row[1],\n",
+    "                \"date\": row[2],\n",
+    "                \"home_team\": row[3],\n",
+    "                \"away_team\": row[4],\n",
+    "                \"home_score\": row[5],\n",
+    "                \"away_score\": row[6],\n",
+    "                \"tournament\": row[7],\n",
+    "                \"city\": row[8],\n",
+    "                \"country\": row[9],\n",
+    "                \"neutral\": row[10],\n",
+    "            }\n",
+    "            for row in result\n",
+    "        ]\n",
+    "        \n",
+    "        # Print matches in the desired format\n",
+    "        print(\"Matches with the most difference between the home_score and away_score:\")\n",
+    "        for idx, match in enumerate(matches_with_most_difference, start=1):\n",
+    "            print(\n",
+    "                f\"Match number: {idx}, Difference: {match['difference']}, Date: {match['date']}, \"\n",
+    "                f\"Home team: {match['home_team']}, Away team: {match['away_team']}, \"\n",
+    "                f\"Home score: {match['home_score']}, Away score: {match['away_score']}\"\n",
+    "            )\n",
+    "\n",
+    "        # Insert flipped matches\n",
+    "        result = connection.execute(text(insert_flipped_matches_query))\n",
+    "        print(f\"Inserted flipped matches. Rows affected: {result.rowcount}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error processing matches: {e}\")\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -982,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
