Leiam e vejam o que é preciso add

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -576,15 +576,19 @@
     "# Afonso\n",
     "username = 'root'\n",
     "password = \"1234\"\n",
+    "\n",
+    "# Miguel Borges\n",
+    "# username = 'root'\n",
+    "# password = \"Cfsb1705!\"\n",
+    "\n",
     "# Miguel Dinis\n",
     "# username = 'root'\n",
     "# password = \"1234\"\n",
+    "\n",
     "# Rafael\n",
     "# username = 'root'\n",
     "# password = \"olaolaola\"\n",
-    "# Miguel Borges\n",
-    "# username = 'root'\n",
-    "# password = \"1234\"\n",
+    "\n",
     "host = 'localhost'\n",
     "port = '3306'\n",
     "database_name = 'football_db'\n",
@@ -844,8 +848,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy.sql import text\n",
-    "\n",
     "# Query 1\n",
     "query1 = text(\"\"\"\n",
     "SELECT *\n",
