Feito a minha parte do relatorio

--- a/BDAProject_organized.ipynb
+++ b/BDAProject_organized.ipynb
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Schema for the database"
+    "## MongoDB collections structure"
    ]
   },
   {
