--- a/BDAProject_08.ipynb
+++ b/BDAProject_08.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "\n",
     "df_goalscorers = df_goalscorers.dropna()\n",
     "\n",
-    "# Substitute the NaN values in the shootouts dataframe on the 'first_shooter' withe a random team between the two teams that played the match\n",
+    "# Substitute the NaN values in the shootouts dataframe on the 'first_shooter' with a random team between the two teams that played the match\n",
     "\n",
     "for index, row in df_shootouts.iterrows():\n",
     "    if pd.isna(row['first_shooter']):\n",
@@ -86,11 +86,7 @@
     "    if column in df_goalscorers.columns:\n",
     "        df_goalscorers[column] = pd.to_datetime(df_goalscorers[column])\n",
     "    if column in df_shootouts.columns:\n",
-    "        df_shootouts[column] = pd.to_datetime(df_shootouts[column])\n",
-    "\n",
-    "print(df_results.head(10))\n",
-    "print(df_goalscorers.head(10))\n",
-    "print(df_shootouts.head(10))"
+    "        df_shootouts[column] = pd.to_datetime(df_shootouts[column])\n"
    ]
   },
   {
@@ -109,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,8 +570,8 @@
    "source": [
     "# Create a MySQL database, a table named \"Football\" to store the data\n",
     "# Afonso\n",
-    "username = 'root'\n",
-    "password = \"1234\"\n",
+    "# username = 'root'\n",
+    "# password = \"1234\"\n",
     "\n",
     "# Miguel Borges\n",
     "# username = 'root'\n",
@@ -586,8 +582,8 @@
     "# password = \"1234\"\n",
     "\n",
     "# Rafael\n",
-    "# username = 'root'\n",
-    "# password = \"olaolaola\"\n",
+    "username = 'root'\n",
+    "password = \"olaolaola\"\n",
     "\n",
     "host = 'localhost'\n",
     "port = '3306'\n",
@@ -1080,7 +1076,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1094,7 +1090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
