cenas que o prof disse

--- a/BDA2425_G008_P1/BDAProject_08.ipynb
+++ b/BDA2425_G008_P1/BDAProject_08.ipynb
@@ -16,7 +16,22 @@
     "Afonso Baptista - fc58213 \\\n",
     "Miguel Borges - fc58187 \\\n",
     "Miguel Dinis - fc58198 \\\n",
-    "Rafael Correia - fc58256"
+    "Rafael Correia - fc58256 \\\n",
+    "\\\n",
+    "\\\n",
+    "Em falta: Tempos que cada coisa demora (obrigatório na fase 2) inicial e depois das otimizações \\\n",
+    "Relational -> Tabelas na 3FN (2 tipos de dados diferentes na mesma tabela; não ter uma coluna com lista de strings que devia ser uma tabela nova; tabela com 15 colunas devia ser partida em 2 e pode ficar + rápida; há pelo menos uma coisa que devia originar outra tabela pela 3FN) VER DEFINIÇÃO E OTIMIZAÇÃO NOS SLIDES \\\n",
+    "Ver se dá para partir mais as tabelas \\\n",
+    "Justificar bem porque usamos só uma (pode pesar nas escritas ou leituras porque podemos não querer passar por tudo para ver uma coisa específica) \\\n",
+    "\\\n",
+    "\\\n",
+    "Podemos fazer a fase 2 neste notebook mas temos de dividir bem o que pertece a quê.\n",
+    "\\\n",
+    "Melhorar o esquema de dados \\\n",
+    "Melhorar as queries\\\n",
+    "Usar indexes \\\n",
+    "Ver os tempos \\\n",
+    "Deixar mais claro o que fizemos em termos de update e write no relatório"
    ]
   },
   {
@@ -1090,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
