--- a/BDA2425_G008_P2/BDAProject_08.ipynb
+++ b/BDA2425_G008_P2/BDAProject_08.ipynb
@@ -595,11 +595,11 @@
     "\n",
     "# Miguel Dinis\n",
     "# username = 'root'\n",
-    "# password = \"1234\"\n",
+    "password = \"MySQLMD-2024\"\n",
     "\n",
     "# Rafael\n",
     "username = 'root'\n",
-    "password = \"olaolaola\"\n",
+    "# password = \"olaolaola\"\n",
     "\n",
     "host = 'localhost'\n",
     "port = '3306'\n",
