--- a/BDA2425_G008_P2/BDAProject_08.ipynb
+++ b/BDA2425_G008_P2/BDAProject_08.ipynb
@@ -141,11 +141,11 @@
     "# MongoDB do Miguel Dinis\n",
     "#client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
     "# MongoDB do Rafa\n",
-    "#client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Afonso\n",
     "# client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Miguel Borges\n",
-    "client = MongoClient(\"mongodb+srv://mfsb3110:Cfsb1705@cluster10.azlt2.mongodb.net/\")"
+    "# client = MongoClient(\"mongodb+srv://mfsb3110:Cfsb1705@cluster10.azlt2.mongodb.net/\")"
    ]
   },
   {
@@ -301,8 +301,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data insertion\n",
-    "\n",
+    "### Data insertion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First we need to put together all the dataframes into a single one, inserting the goalscorers and shootout details into one dataframe. After that we can insert the data into the MongoDB collection.\n",
     "\n",
     "Obs: We saw that exists 2 shootouts there are not in the results.csv file, so we will not insert them in the database, because if we dont have the match itself, we thought that it would not make sense to insert the shootout in the database."
@@ -1153,9 +1158,9 @@
    "outputs": [],
    "source": [
     "# MongoDB do Miguel Dinis\n",
-    "client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
+    "# client = MongoClient(\"mongodb+srv://fc58198:ClusterPass@cluster0.wbcd4.mongodb.net/\") \n",
     "# MongoDB do Rafa\n",
-    "#client = MongoClient(\"mongodb://localhost:27017\")\n",
+    "client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Afonso\n",
     "# client = MongoClient(\"mongodb://localhost:27017\")\n",
     "# MongoDB do Miguel Borges\n",
@@ -1166,7 +1171,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### MongoDB collections structure"
+    "#### MongoDB collections structure for the new optimize version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we trying to optimize the database for the queries, we will create 4 collections, one for the matches, one for the goalscorers, one for the shootouts and one for the locations. We know that normaly for nosql databases we should embed the data, but we are trying to optimize the queries, so we will have the data that we don't need as often in a different collection.\n"
    ]
   },
   {
@@ -1175,7 +1187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schema_validator = {\n",
+    "schema_validator_matches = {\n",
     "    \"$jsonSchema\": {\n",
     "        \"bsonType\": \"object\",\n",
     "        \"title\": \"Schema for the results of the matches\",\n",
@@ -1186,8 +1198,7 @@
     "            \"home_score\",\n",
     "            \"away_score\",\n",
     "            \"tournament\",\n",
-    "            \"city\",\n",
-    "            \"country\",\n",
+    "            \"location\",\n",
     "            \"neutral\",\n",
     "            \"goalscorers\",\n",
     "        ],\n",
@@ -1216,13 +1227,9 @@
     "                \"bsonType\": \"string\",\n",
     "                \"description\": \"Must be a string representing the tournament name\",\n",
     "            },\n",
-    "            \"city\": {\n",
-    "                \"bsonType\": \"string\",\n",
-    "                \"description\": \"Must be a string representing the city\",\n",
-    "            },\n",
-    "            \"country\": {\n",
-    "                \"bsonType\": \"string\",\n",
-    "                \"description\": \"Must be a string representing the country\",\n",
+    "            \"location\": {\n",
+    "                \"bsonType\": \"objectId\",\n",
+    "                \"description\": \"Must be an objectid representing the location of the match\",\n",
     "            },\n",
     "            \"neutral\": {\n",
     "                \"bsonType\": \"bool\",\n",
@@ -1232,55 +1239,100 @@
     "                \"bsonType\": \"array\",\n",
     "                \"description\": \"List of goalscorers, can be empty\",\n",
     "                \"items\": {\n",
-    "                    \"bsonType\": \"object\",\n",
-    "                    \"required\": [\"team\", \"scorer\", \"minute\", \"own_goal\", \"penalty\"],\n",
-    "                    \"properties\": {\n",
-    "                        \"team\": {\n",
-    "                            \"bsonType\": \"string\",\n",
-    "                            \"description\": \"Must be a string representing the team of the scorer\",\n",
-    "                        },\n",
-    "                        \"scorer\": {\n",
-    "                            \"bsonType\": \"string\",\n",
-    "                            \"description\": \"Must be a string representing the name of the scorer\",\n",
-    "                        },\n",
-    "                        \"minute\": {\n",
-    "                            \"bsonType\": \"double\",\n",
-    "                            \"description\": \"Must be a float representing the minute of the goal\",\n",
-    "                        },\n",
-    "                        \"own_goal\": {\n",
-    "                            \"bsonType\": \"bool\",\n",
-    "                            \"description\": \"Must be a boolean indicating if the goal was an own goal\",\n",
-    "                        },\n",
-    "                        \"penalty\": {\n",
-    "                            \"bsonType\": \"bool\",\n",
-    "                            \"description\": \"Must be a boolean indicating if the goal was a penalty\",\n",
-    "                        },\n",
-    "                    },\n",
+    "                    \"bsonType\": \"objectId\",\n",
+    "                    \"description\": \"Objectid of the goalscorer\",\n",
     "                },\n",
     "            },\n",
-    "            \"shootout\": {\n",
-    "                \"oneOf\": [\n",
-    "                    {\n",
-    "                        \"bsonType\": \"null\",\n",
-    "                        \"description\": \"Can be null if no shootout occurred\",\n",
-    "                    },\n",
-    "                    {\n",
-    "                        \"bsonType\": \"object\",\n",
-    "                        \"description\": \"Optional object for shootout details\",\n",
-    "                        \"required\": [\"winner\", \"first_shooter\"],\n",
-    "                        \"properties\": {\n",
-    "                            \"winner\": {\n",
-    "                                \"bsonType\": \"string\",\n",
-    "                                \"description\": \"Must be a string representing the shootout winner\",\n",
-    "                            },\n",
-    "                            \"first_shooter\": {\n",
-    "                                \"bsonType\": \"string\",\n",
-    "                                \"description\": \"Must be a string representing the first shooter\",\n",
-    "                            },\n",
-    "                        },\n",
-    "                    },\n",
-    "                ],\n",
-    "            }\n",
+    "        \"shootout\": {\n",
+    "            \"oneOf\": [\n",
+    "                {\n",
+    "                    \"bsonType\": \"null\",\n",
+    "                    \"description\": \"Can be null if no shootout occurred\",\n",
+    "                },\n",
+    "                {\n",
+    "                    \"bsonType\": \"objectId\",\n",
+    "                    \"description\": \"Objectid of the shootout\",\n",
+    "                },\n",
+    "            ],\n",
+    "        }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "schema_validator_goalscorers = {\n",
+    "    \"$jsonSchema\": {\n",
+    "        \"bsonType\": \"object\",\n",
+    "        \"title\": \"Schema for the goalscorers\",\n",
+    "        \"required\": [\n",
+    "            \"team\",\n",
+    "            \"scorer\",\n",
+    "            \"minute\",\n",
+    "            \"own_goal\",\n",
+    "            \"penalty\",\n",
+    "        ],\n",
+    "        \"properties\": {\n",
+    "            \"team\": {\n",
+    "                \"bsonType\": \"string\",\n",
+    "                \"description\": \"Must be a string representing the team of the scorer\",\n",
+    "            },\n",
+    "            \"scorer\": {\n",
+    "                \"bsonType\": \"string\",\n",
+    "                \"description\": \"Must be a string representing the name of the scorer\",\n",
+    "            },\n",
+    "            \"minute\": {\n",
+    "                \"bsonType\": \"double\",\n",
+    "                \"description\": \"Must be a float representing the minute of the goal\",\n",
+    "            },\n",
+    "            \"own_goal\": {\n",
+    "                \"bsonType\": \"bool\",\n",
+    "                \"description\": \"Must be a boolean indicating if the goal was an own goal\",\n",
+    "            },\n",
+    "            \"penalty\": {\n",
+    "                \"bsonType\": \"bool\",\n",
+    "                \"description\": \"Must be a boolean indicating if the goal was a penalty\",\n",
+    "            },\n",
+    "        },\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "schema_validator_shootouts = {\n",
+    "    \"$jsonSchema\": {\n",
+    "        \"bsonType\": \"object\",\n",
+    "        \"title\": \"Schema for the shootouts\",\n",
+    "        \"required\": [\n",
+    "            \"winner\",\n",
+    "            \"first_shooter\",\n",
+    "        ],\n",
+    "        \"properties\": {\n",
+    "            \"winner\": {\n",
+    "                \"bsonType\": \"string\",\n",
+    "                \"description\": \"Must be a string representing the shootout winner\",\n",
+    "            },\n",
+    "            \"first_shooter\": {\n",
+    "                \"bsonType\": \"string\",\n",
+    "                \"description\": \"Must be a string representing the first shooter\",\n",
+    "            },\n",
+    "        },\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "schema_validato_locations = {\n",
+    "    \"$jsonSchema\": {\n",
+    "        \"bsonType\": \"object\",\n",
+    "        \"title\": \"Schema for the locations\",\n",
+    "        \"required\": [\n",
+    "            \"city\",\n",
+    "            \"country\",\n",
+    "        ],\n",
+    "        \"properties\": {\n",
+    "            \"city\": {\n",
+    "                \"bsonType\": \"string\",\n",
+    "                \"description\": \"Must be a string representing the city\",\n",
+    "            },\n",
+    "            \"country\": {\n",
+    "                \"bsonType\": \"string\",\n",
+    "                \"description\": \"Must be a string representing the country\",\n",
+    "            },\n",
     "        },\n",
     "    }\n",
     "}"
@@ -1299,14 +1351,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.drop_database('football') # Drop the database if it already exists\n",
+    "client.drop_database('football_optimized') # Drop the database if it already exists\n",
     "\n",
-    "db = client['football'] # Create the database\n",
+    "db_mongo_optimized = client['football_optimized'] # Create the database\n",
     "\n",
-    "# Create the collection with the schema validator\n",
+    "# Create the collections withe their schema validators\n",
     "\n",
     "try:\n",
-    "    collection_results = db.create_collection('football_results', validator={'$jsonSchema': schema_validator['$jsonSchema']}) \n",
+    "    collection_matches = db_mongo_optimized.create_collection('football_results', validator={'$jsonSchema': schema_validator_matches['$jsonSchema']})\n",
+    "    collection_goalscorers = db_mongo_optimized.create_collection('football_goalscorers', validator={'$jsonSchema': schema_validator_goalscorers['$jsonSchema']})\n",
+    "    collection_shootouts = db_mongo_optimized.create_collection('football_shootouts', validator={'$jsonSchema': schema_validator_shootouts['$jsonSchema']})\n",
+    "    collection_locations = db_mongo_optimized.create_collection('football_locations', validator={'$jsonSchema': schema_validato_locations['$jsonSchema']})\n",
     "except Exception as e:\n",
     "    print(e)\n"
    ]
@@ -2312,7 +2367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
