tabela details criada e dados inseridos

--- a/BDA2425_G008_P2/BDAProject_08.ipynb
+++ b/BDA2425_G008_P2/BDAProject_08.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
     "# Create a MySQL database, a table named \"Football\" to store the data\n",
     "# Afonso\n",
     "username = 'root'\n",
-    "password = \"1234\"\n",
+    "#password = \"1234\"\n",
     "\n",
     "# Miguel Borges\n",
     "# username = 'root'\n",
@@ -1685,7 +1685,7 @@
     "\n",
     "# Miguel Dinis\n",
     "# username = 'root'\n",
-    "# password = \"MySQLMD-2024\"\n",
+    "password = \"MySQLMD-2024\"\n",
     "\n",
     "# Rafael\n",
     "# username = 'root'\n",
@@ -1739,7 +1739,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Defining the relational schema"
+    "#### Defining the relational schema\n",
+    "We created a *locations* table to make it easier to identify a match from the *matches* table by looking for the *location_id*, that leads to a specific *city* and *country*."
    ]
   },
   {
@@ -1757,6 +1758,18 @@
     ");\n",
     "\"\"\"\n",
     "\n",
+    "# create details table with the tournament, location_id and neutral fields\n",
+    "create_details_table = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS details (\n",
+    "    detail_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    tournament VARCHAR(100),\n",
+    "    location_id INT,\n",
+    "    neutral BOOLEAN,\n",
+    "    FOREIGN KEY (location_id) REFERENCES locations(location_id)\n",
+    ");\n",
+    "\"\"\"\n",
+    " \n",
+    "# matches table with the date, home_team, away_team, home_score, away_score, detail_id fields\n",
     "create_matches_table = \"\"\"\n",
     "CREATE TABLE IF NOT EXISTS matches (\n",
     "    match_id INT AUTO_INCREMENT PRIMARY KEY,\n",
@@ -1765,10 +1778,8 @@
     "    away_team VARCHAR(100) NOT NULL,\n",
     "    home_score INT NOT NULL,\n",
     "    away_score INT NOT NULL,\n",
-    "    tournament VARCHAR(100),\n",
-    "    location_id INT NOT NULL,\n",
-    "    neutral BOOLEAN,\n",
-    "    FOREIGN KEY (location_id) REFERENCES locations(location_id)\n",
+    "    detail_id INT,\n",
+    "    FOREIGN KEY (detail_id) REFERENCES details(detail_id)\n",
     ");\n",
     "\"\"\"\n",
     "\n",
@@ -1800,6 +1811,9 @@
     "    with engine.connect() as connection:\n",
     "        connection.execute(text(create_locations_table))\n",
     "        print(\"Table 'locations' created successfully.\")\n",
+    "        \n",
+    "        connection.execute(text(create_details_table))\n",
+    "        print(\"Table 'details' created successfully.\")\n",
     "        \n",
     "        connection.execute(text(create_matches_table))\n",
     "        print(\"Table 'matches' created successfully.\")\n",
@@ -1863,7 +1877,53 @@
     "        print(\"Data inserted into 'locations' successfully.\")\n",
     "except Exception as e:\n",
     "    print(f\"Error inserting data into 'locations': {e}\")\n",
+    "    \n",
+    "    \n",
+    "# insert data into the 'details' and preload 'detail_id' mappings\n",
+    "detail_id_map = {}\n",
     "\n",
+    "try:\n",
+    "    with engine.begin() as connection:\n",
+    "        result = connection.execute(text(\"SELECT detail_id, tournament, location_id, neutral FROM details\"))\n",
+    "        \n",
+    "        for row in result:\n",
+    "            detail_id_map[(row[1], row[2], row[3])] = row[0]\n",
+    "            \n",
+    "        batch_data = []\n",
+    "        for index, row in df_results.iterrows():\n",
+    "            location_id = location_id_map.get((row['city'], row['country']))\n",
+    "            key = (row['tournament'], location_id, row['neutral'])\n",
+    "            if location_id and key not in detail_id_map:\n",
+    "                batch_data.append({'tournament': row['tournament'], 'location_id': location_id, 'neutral': row['neutral']})\n",
+    "                \n",
+    "            if len(batch_data) >= batch_size:\n",
+    "                connection.execute(text(\"\"\"\n",
+    "                    INSERT INTO details (tournament, location_id, neutral)\n",
+    "                    VALUES (:tournament, :location_id, :neutral)\n",
+    "                \"\"\"), batch_data)\n",
+    "                \n",
+    "                result = connection.execute(text(\"SELECT detail_id, tournament, location_id, neutral FROM details\"))\n",
+    "                \n",
+    "                for row in result:\n",
+    "                    detail_id_map[(row[1], row[2], row[3])] = row[0]\n",
+    "                \n",
+    "                batch_data = []\n",
+    "        \n",
+    "        if batch_data:\n",
+    "            connection.execute(text(\"\"\"\n",
+    "                INSERT INTO details (tournament, location_id, neutral)\n",
+    "                VALUES (:tournament, :location_id, :neutral)\n",
+    "            \"\"\"), batch_data)\n",
+    "            \n",
+    "            result = connection.execute(text(\"SELECT detail_id, tournament, location_id, neutral FROM details\"))\n",
+    "            \n",
+    "            for row in result:\n",
+    "                detail_id_map[(row[1], row[2], row[3])] = row[0]\n",
+    "                \n",
+    "        print(\"Data inserted into 'details' successfully.\")\n",
+    "        \n",
+    "except Exception as e:\n",
+    "    print(f\"Error inserting data into 'details': {e}\")\n",
     "\n",
     "# Step 2: Insert data into 'matches'\n",
     "try:\n",
@@ -1871,28 +1931,28 @@
     "        batch_data = []\n",
     "        for index, row in df_results.iterrows():\n",
     "            location_id = location_id_map.get((row['city'], row['country']))\n",
-    "            if location_id:\n",
+    "            detail_id = detail_id_map.get((row['tournament'], location_id, row['neutral']))\n",
+    "            \n",
+    "            if detail_id:\n",
     "                batch_data.append({\n",
     "                    'date': row['date'],\n",
     "                    'home_team': row['home_team'],\n",
     "                    'away_team': row['away_team'],\n",
     "                    'home_score': row['home_score'],\n",
     "                    'away_score': row['away_score'],\n",
-    "                    'tournament': row['tournament'],\n",
-    "                    'location_id': location_id,\n",
-    "                    'neutral': row['neutral']\n",
+    "                    'detail_id': detail_id\n",
     "                })\n",
     "\n",
     "            if len(batch_data) >= batch_size:\n",
     "                connection.execute(text(\"\"\"\n",
-    "                    INSERT INTO matches (date, home_team, away_team, home_score, away_score, tournament, location_id, neutral)\n",
-    "                    VALUES (:date, :home_team, :away_team, :home_score, :away_score, :tournament, :location_id, :neutral)\n",
+    "                    INSERT INTO matches (date, home_team, away_team, home_score, away_score, detail_id)\n",
+    "                    VALUES (:date, :home_team, :away_team, :home_score, :away_score, :detail_id)\n",
     "                \"\"\"), batch_data)\n",
     "                batch_data = []\n",
     "        if batch_data:\n",
     "            connection.execute(text(\"\"\"\n",
-    "                INSERT INTO matches (date, home_team, away_team, home_score, away_score, tournament, location_id, neutral)\n",
-    "                VALUES (:date, :home_team, :away_team, :home_score, :away_score, :tournament, :location_id, :neutral)\n",
+    "                INSERT INTO matches (date, home_team, away_team, home_score, away_score, detail_id)\n",
+    "                VALUES (:date, :home_team, :away_team, :home_score, :away_score, :detail_id)\n",
     "            \"\"\"), batch_data)\n",
     "        print(\"Data inserted into 'matches' successfully.\")\n",
     "except Exception as e:\n",
@@ -1962,6 +2022,7 @@
     "                print(f\"Missing match_id for key {key}\")  # Debugging line\n",
     "\n",
     "            if len(batch_data) >= batch_size:\n",
+    "            \n",
     "                connection.execute(text(\"\"\"\n",
     "                    INSERT INTO shootouts (match_id, winner, first_shooter)\n",
     "                    VALUES (:match_id, :winner, :first_shooter)\n",
@@ -2609,7 +2670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2623,7 +2684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
