--- a/BDA2425_G008_P2/BDAProject_08.ipynb
+++ b/BDA2425_G008_P2/BDAProject_08.ipynb
@@ -1769,7 +1769,9 @@
    "metadata": {},
    "source": [
     "#### Defining the relational schema\n",
-    "We created a *locations* table to make it easier to identify a match from the *matches* table by looking for the *location_id*, that leads to a specific *city* and *country*."
+    "We created a **locations** table to make it easier to identify a match from the *matches* table by looking for the *location_id*, that leads to a specific *city* and *country*. \\\n",
+    "We have also created a **details** table that stores the *tournament*, *location_id* and the *neutral fields*. \\\n",
+    "After this, the **matches** table will store only the main features of each match, which are *date*, *home_team*, *away_team*, *home_score*, *away_score* and *detail_id*."
    ]
   },
   {
